# cookiecutters

go/: cookiecutter.json
go/hooks/: post_gen_project.sh
go/{{ cookiecutter.project_slug }}/: .gitignore  flake.nix  main.go
haskell/: cookiecutter.json
haskell/hooks/: post_gen_project.sh
haskell/{{ cookiecutter.project_slug }}/: .gitignore  cabal.project  flake.nix  ghcid-wrapper
haskell/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: {{ cookiecutter.project_slug }}.cabal
haskell/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/app/: Main.hs
haskell/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/src/: {{ cookiecutter.__hs_module }}.hs
python/: cookiecutter.json
python/hooks/: post_gen_project.sh
python/{{ cookiecutter.project_slug }}/: flake.nix  pyproject.toml  {{ cookiecutter.__py_module }}.py
typst/: cookiecutter.json
typst/hooks/: post_gen_project.sh
typst/{{ cookiecutter.project_slug }}/: .gitignore  flake.nix  main.typ
